--- a/IROApps.PortForwarding.ClientApp/IROApps.PortForwarding.ClientApp.csproj
+++ b/IROApps.PortForwarding.ClientApp/IROApps.PortForwarding.ClientApp.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Args" Version="1.2.1" />
-    <PackageReference Include="IRO.Mvc.Core" Version="1.2.9" />
+    <PackageReference Include="IRO.Mvc.Core" Version="1.2.10" />
   </ItemGroup>
 
   <ItemGroup>
