Start dev it on signalr.

--- a/IROApps.PortForwarding.sln.startup.json
+++ b/IROApps.PortForwarding.sln.startup.json
@@ -14,7 +14,7 @@
       "Projects": {
         "IROApps.PortForwarding.ServerApp": {},
         "IROApps.PortForwarding.ClientApp": {
-          "CommandLineArguments": "/AddressTo https://localhost:5001 /Server https://localhost:6001 /AdminKey pass"
+          "CommandLineArguments": "/AddressTo https://google.com /Server https://localhost:6001 /AdminKey pass"
         }
       }
     },
