--- a/IROApps.PortForwarding.ClientApp/IROApps.PortForwarding.ClientApp.csproj
+++ b/IROApps.PortForwarding.ClientApp/IROApps.PortForwarding.ClientApp.csproj
@@ -8,6 +8,10 @@
   <ItemGroup>
     <PackageReference Include="Args" Version="1.2.1" />
     <PackageReference Include="IRO.Mvc.Core" Version="1.2.10" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.1" />
+    <PackageReference Include="System.Text.Encoding" Version="4.3.0" />
+    <PackageReference Include="System.Text.Encoding.Extensions" Version="4.3.0" />
+    <PackageReference Include="System.Text.Encodings.Web" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
