--- a/IROApps.PortForwarding.ServerApp/IROApps.PortForwarding.ServerApp.csproj
+++ b/IROApps.PortForwarding.ServerApp/IROApps.PortForwarding.ServerApp.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="IRO.Mvc.Core" Version="1.2.10" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
   </ItemGroup>
 
 
