--- a/IROApps.PortForwarding.ClientApp/Properties/launchSettings.json
+++ b/IROApps.PortForwarding.ClientApp/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "IROApps.PortForwarding.ClientApp": {
       "commandName": "Project",
-      "commandLineArgs": "/AddressTo https://google.com /Server https://localhost:6001 /AdminKey pass"
+      "commandLineArgs": "/AddressTo https://localhost:5001 /Server https://localhost:7001 /AdminKey pass"
     }
   }
 }
