--- a/IROApps.PortForwarding.ClientApp/IROApps.PortForwarding.ClientApp.csproj
+++ b/IROApps.PortForwarding.ClientApp/IROApps.PortForwarding.ClientApp.csproj
@@ -9,15 +9,13 @@
     <PackageReference Include="Args" Version="1.2.1" />
     <PackageReference Include="IRO.Mvc.Core" Version="1.2.10" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Text.Encoding" Version="4.3.0" />
     <PackageReference Include="System.Text.Encoding.Extensions" Version="4.3.0" />
     <PackageReference Include="System.Text.Encodings.Web" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>C:\Users\Yura\.nuget\packages\newtonsoft.json\12.0.3\lib\netstandard2.0\Newtonsoft.Json.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
