--- a/IROApps.PortForwarding.ServerApp/IROApps.PortForwarding.ServerApp.csproj
+++ b/IROApps.PortForwarding.ServerApp/IROApps.PortForwarding.ServerApp.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="IRO.Mvc.Core" Version="1.2.10" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
