--- a/IROApps.PortForwarding.ClientApp/IROApps.PortForwarding.ClientApp.csproj
+++ b/IROApps.PortForwarding.ClientApp/IROApps.PortForwarding.ClientApp.csproj
@@ -11,7 +11,9 @@
 
   <ItemGroup>
     <PackageReference Include="Args" Version="1.2.1" />
-    <PackageReference Include="IRO.Mvc.Core" Version="1.2.10" />
+    <PackageReference Include="IRO.Mvc.Core" Version="1.2.10" >
+      <NoWarn>NU1605</NoWarn>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Text.Encoding" Version="4.3.0" />
