--- a/IROApps.PortForwarding.ClientApp/IROApps.PortForwarding.ClientApp.csproj
+++ b/IROApps.PortForwarding.ClientApp/IROApps.PortForwarding.ClientApp.csproj
@@ -11,11 +11,11 @@
 
   <ItemGroup>
     <PackageReference Include="Args" Version="1.2.1" />
-    <PackageReference Include="IRO.Mvc.Core" Version="1.2.10" >
-      <NoWarn>NU1605</NoWarn>
+    <PackageReference Include="IRO.Mvc.Core" Version="1.2.10">
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.Collections" Version="4.3.0" />
     <PackageReference Include="System.Text.Encoding" Version="4.3.0" />
     <PackageReference Include="System.Text.Encoding.Extensions" Version="4.3.0" />
     <PackageReference Include="System.Text.Encodings.Web" Version="5.0.0" />
