--- a/IROApps.PortForwarding.ServerApp/IROApps.PortForwarding.ServerApp.csproj
+++ b/IROApps.PortForwarding.ServerApp/IROApps.PortForwarding.ServerApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -9,10 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="IRO.Mvc.Core" Version="1.2.10" >
-      <NoWarn>NU1605</NoWarn>
+    <PackageReference Include="IRO.Mvc.Core" Version="1.2.10">
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
+    <PackageReference Include="System.Collections" Version="4.3.0" />
   </ItemGroup>
 
 
