--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
 	"name": "Port forwarding",
 	"description": "Your own webhooks server, analog of ngrok for heroku.",
-	"repository": "https://github.com/IT-rolling-out/IROApps.PortForwarding",
+	"repository": "https://github.com/IT-rolling-out/IRO.PortForwarding",
 	"buildpacks": [{
 		"url": "https://github.com/jincod/dotnetcore-buildpack"
 	}],
@@ -12,7 +12,7 @@
 		},
 		"PROJECT_NAME": {
 			"description": "Herokuy variable",
-			"value": "IROApps.PortForwarding.ServerApp"
+			"value": "IRO.PortForwarding.ServerApp"
 		}
 	}
 }
